--- a/config/pages.yml
+++ b/config/pages.yml
@@ -2,7 +2,7 @@
   url: the url of the page
   selector: an xpath selector
   refresh_time: number of seconds you want to wait between check and check
-"put here the name of another page":
+"put here the name of the page":
   url: the url of the page
   selector: an xpath selector
   refresh_time: number of seconds you want to wait between check and check
